--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ td{
     height: 100px;
     width: 100px;
     text-align: center;
-    font-family: "Chiller", sans-serif;
+    font-family: "Helvetica", sans-serif;
     color: white;
     font-size: 80px;
     cursor: pointer;
@@ -20,7 +20,7 @@ td:hover{
 }
 
 h1{
-    font-family: "Chiller", sans-serif;
+    font-family: "Helvetica", sans-serif;
     font-size: 50px
 }
 table{
@@ -57,15 +57,15 @@ table tr td:last-child{
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
-    font-family: "Chiller", sans-serif;
+    font-family: "Helvetica", sans-serif;
     border-radius: 5px;
     color:rgb(55, 0, 255);
     font-size: 2em;
 }
 
 button{
-    font-family: "Chiller", sans-serif;
-    font-size: 40px;
+    font-family: "Helvetica", sans-serif;
+    font-size: 30px;
     height: auto;
     width: auto;
 }
