--- a/style.css
+++ b/style.css
@@ -3,68 +3,14 @@ body{
     background-size: 100%;
     color: rgba(252, 6, 6, 0.89);
 }
+p{
+    font-family: "Forte", sans-serif;
+    font-size: 100px;
+    color: aquamarine
 
-td{
-    border: 7px solid rgba(228, 137, 19, 0.651);
-    height: 100px;
-    width: 100px;
-    text-align: center;
-    font-family: "Helvetica", sans-serif;
-    color: white;
-    font-size: 80px;
-    cursor: pointer;
 }
-
-td:hover{
-    background-color:grey;
-}
-
-h1{
-    font-family: "Helvetica", sans-serif;
-    font-size: 50px
-}
-table{
-    border-collapse: collapse;
-    position: absolute;
-    left: 50%;
-    margin-left: -150px;
-}
-
-table tr:first-child td{
-    border-top: 0;
-}
-
-table tr:last-child td{
-    border-bottom: 0;
-}
-
-table tr td:first-child{
-    border-left: 0;
-}
-
-table tr td:last-child{
-    border-right: 0;
-}
-
-.endgame{
-    display: none;
-    width: 200px;
-    top: 120px;
-    background-color: rgba(194, 223, 67, 0.8);
-    position: absolute;
-    left: 50%;
-    margin-left: -100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    text-align: center;
-    font-family: "Helvetica", sans-serif;
-    border-radius: 5px;
-    color:rgb(55, 0, 255);
-    font-size: 2em;
-}
-
 button{
-    font-family: "Helvetica", sans-serif;
+    font-family: "Forte", sans-serif;
     font-size: 30px;
     height: auto;
     width: auto;
