--- a/style.css
+++ b/style.css
@@ -5,15 +5,17 @@ body{
 }
 p{
     font-family: "Forte", sans-serif;
-    font-size: 100px;
+    font-size: 150px;
     color: aquamarine
 
 }
-button{
+
+.block{
     font-family: "Forte", sans-serif;
-    font-size: 30px;
+    font-size: 100px;
+    text-align: center;
     height: auto;
-    width: auto;
+    width: 100%;    
 }
 
 button:hover{
